--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
-	"dependencies":{
-		"jszip"	: "3.1.3"
-	}
+  "dependencies": {
+    "jszip": "3.1.3"
+  },
+  "devDependencies": {
+    "typescript": "^2.0.3",
+    "concurrently": "^3.0.0",
+    "uglify-js": "2.7.4"
+  },
+  "scripts": {
+    "build": "tsc | uglifyjs docx.js --mangle -o docx.min.js",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w"
+  }
 }
