--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "noImplicitAny": false,
     "noEmitOnError": true,
+    "pretty": true,
     "removeComments": false,
     "sourceMap": true,
     "target": "es5",
