--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "jszip": "3.1.3"
   },
   "devDependencies": {
-    "typescript": "^2.0.3",
-    "concurrently": "^3.0.0",
+    "typescript": "2.0.6",
     "uglify-js": "2.7.4"
   },
   "scripts": {
