--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "jszip": "3.1.3"
   },
   "devDependencies": {
-    "typescript": "2.0.6",
+    "@types/jszip": "^0.0.31",
+    "typescript": "2.0.9",
     "uglify-js": "2.7.4"
   },
   "scripts": {
