--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "name": "docx-preview",
+  "version": "0.1.0",
+  "author": {
+    "name": "Volodymyr Baydalka"    
+  },
   "dependencies": {
     "jszip": "3.1.3"
   },
