--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "docx-preview",
-  "version": "0.1.0",
+  "version": "0.1.1",
+  "license": "Apache-2.0",
+  "keywords": [
+    "word",
+    "docx"
+  ],
   "author": {
     "name": "Volodymyr Baydalka"    
   },
