--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docx-preview",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "license": "Apache-2.0",
   "keywords": [
     "word",
@@ -9,15 +9,20 @@
   "author": {
     "name": "Volodymyr Baydalka"
   },
-  "dependencies": {
-    "jszip": "3.1.3"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zVolodymyr/docxjs.git"
+  },
+  "peerDependencies": {
+    "jszip": ">=3.0.0"
   },
   "devDependencies": {
-    "@types/jszip": "^0.0.31",
+    "@types/jszip": "^3.1.6",
     "awesome-typescript-loader": "5.2.1",
-    "typescript": "^3.3.4000",
-    "webpack": "4.29.6",
-    "webpack-cli": "^3.3.0"
+    "jszip": "^3.2.2",
+    "typescript": "^3.6.4",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9"
   },
   "scripts": {
     "build": "webpack --mode production",
