--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "removeComments": true,
     "preserveConstEnums": true,
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "sourceMap": true,
     "target": "es5",
     "outDir": "dist",
