--- a/package.json
+++ b/package.json
@@ -18,15 +18,21 @@
   },
   "devDependencies": {
     "@types/jszip": "^3.1.6",
+    "@types/node": "^14.14.9",
     "awesome-typescript-loader": "5.2.1",
-    "jszip": "^3.2.2",
-    "typescript": "^3.7.2",
+    "jasmine-core": "^3.6.0",
+    "jszip": "^3.5.0",
+    "karma": "^5.2.3",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-jasmine": "^4.0.1",
+    "typescript": "^4.1.2",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
   },
   "scripts": {
     "build": "webpack --mode production",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "test": "karma start"
   },
   "files": [
     "dist"
