--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docx-preview",
-  "version": "0.1.5",
+  "version": "0.1.6-next.0",
   "license": "Apache-2.0",
   "keywords": [
     "word",
