--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
   },
   "devDependencies": {
     "@types/jszip": "^3.1.6",
-    "@types/node": "^14.14.9",
-    "awesome-typescript-loader": "5.2.1",
+    "@types/node": "^14.14.31",
     "jasmine-core": "^3.6.0",
-    "jszip": "^3.5.0",
+    "jszip": "^3.6.0",
     "karma": "^5.2.3",
     "karma-chrome-launcher": "^3.1.0",
     "karma-jasmine": "^4.0.1",
+    "ts-loader": "^8.0.17",
     "typescript": "^4.1.2",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "webpack": "^5.24.3",
+    "webpack-cli": "^4.5.0"
   },
   "scripts": {
     "build": "webpack --mode production",
