--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docx-preview",
-  "version": "0.1.6-next.3",
+  "version": "0.2.0-next.1",
   "license": "Apache-2.0",
   "keywords": [
     "word",
@@ -18,16 +18,16 @@
   },
   "devDependencies": {
     "@types/jszip": "^3.1.6",
-    "@types/node": "^14.14.31",
     "jasmine-core": "^3.6.0",
-    "jszip": "^3.6.0",
-    "karma": "^5.2.3",
+    "jszip": "^3.5.0",
+    "karma": "^6.3.9",
     "karma-chrome-launcher": "^3.1.0",
     "karma-jasmine": "^4.0.1",
-    "ts-loader": "^8.0.17",
+    "ts-loader": "9.2.6",
+    "tslib": "^2.3.1",
     "typescript": "^4.1.2",
-    "webpack": "^5.24.3",
-    "webpack-cli": "^4.5.0"
+    "webpack": "^5.64.1",
+    "webpack-cli": "^4.9.1"
   },
   "scripts": {
     "build": "webpack --mode production",
