--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "webpack-cli": "^4.9.1"
   },
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "webpack",
+    "build-prod": "webpack --mode production",
+    "build-all": "npm run build & npm run build-prod",
     "watch": "webpack --watch",
     "e2e": "karma start"
   },
