--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docx-preview",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "license": "Apache-2.0",
   "keywords": [
     "word",
@@ -13,13 +13,11 @@
     "type": "git",
     "url": "git+https://github.com/zVolodymyr/docxjs.git"
   },
-  "peerDependencies": {
+  "dependencies": {
     "jszip": ">=3.0.0"
   },
   "devDependencies": {
-    "@types/jszip": "^3.1.6",
     "jasmine-core": "^3.6.0",
-    "jszip": "^3.5.0",
     "karma": "^6.3.9",
     "karma-chrome-launcher": "^3.1.0",
     "karma-jasmine": "^4.0.1",
