--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jszip": ">=3.0.0"
   },
   "devDependencies": {
+    "diff": "^5.0.0",
     "jasmine-core": "^3.6.0",
     "karma": "^6.3.9",
     "karma-chrome-launcher": "^3.1.0",
