--- a/package.json
+++ b/package.json
@@ -39,5 +39,6 @@
   "files": [
     "dist"
   ],
-  "main": "dist/docx-preview.min.js"
+  "main": "dist/docx-preview.min.js",
+  "types": "dist/docx-preview.d.ts"
 }
