--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   },
   "devDependencies": {
     "diff": "^5.0.0",
-    "jasmine-core": "^3.6.0",
+    "jasmine-core": "^4.0.1",
     "karma": "^6.3.9",
     "karma-chrome-launcher": "^3.1.0",
+    "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "^4.0.1",
-    "ts-loader": "9.2.6",
+    "ts-loader": "^9.2.6",
     "tslib": "^2.3.1",
     "typescript": "^4.1.2",
     "webpack": "^5.64.1",
