--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docx-preview",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "license": "Apache-2.0",
   "keywords": [
     "word",
@@ -17,12 +17,15 @@
     "jszip": ">=3.0.0"
   },
   "devDependencies": {
+    "css-loader": "^6.7.1",
     "diff": "^5.0.0",
     "jasmine-core": "^4.1.0",
     "karma": "^6.3.9",
     "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "^5.0.0",
+    "sass": "^1.51.0",
+    "sass-loader": "^12.6.0",
     "ts-loader": "^9.2.6",
     "tslib": "^2.4.0",
     "typescript": "^4.1.2",
