--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "sourceMap": true,
     "noEmitHelpers": false,
     "importHelpers": false,
-    "target": "es6",
+    "target": "ES2017",
     "outDir": "dist",
     "lib": [
       "es6",
