migrate to ES modules and ES2020 separate UMD modules

--- a/package.json
+++ b/package.json
@@ -17,15 +17,12 @@
     "jszip": ">=3.0.0"
   },
   "devDependencies": {
-    "css-loader": "^6.7.1",
     "diff": "^5.0.0",
-    "jasmine-core": "^4.1.0",
+    "jasmine-core": "^5.1.0",
     "karma": "^6.3.9",
     "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "^5.0.0",
-    "sass": "^1.51.0",
-    "sass-loader": "^13.2.2",
     "ts-loader": "^9.2.6",
     "tslib": "^2.4.0",
     "typescript": "^5.0.3",
@@ -35,8 +32,9 @@
   "scripts": {
     "build": "webpack",
     "build-prod": "webpack --mode production",
-    "build-all": "npm run build & npm run build-prod",
-    "watch": "webpack --watch",
+    "build-umd": "webpack --env umd=true",
+    "build-all": "npm run build & npm run build-prod & npm run build-umd",
+    "watch": "webpack --env umd=true --watch",
     "e2e": "karma start --single-run",
     "e2e-watch": "karma start"
   },
