Updated rendering of underlines Added underlines test Updated header/footer positioning Used .mjs extension for ES module Exposed new experimental API

--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
   "files": [
     "dist"
   ],
-  "main": "dist/docx-preview.min.js",
+  "main": "dist/docx-preview.min.mjs",
   "types": "dist/docx-preview.d.ts"
 }
