--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docx-preview",
-  "version": "0.1.21",
+  "version": "0.1.22",
   "license": "Apache-2.0",
   "keywords": [
     "word",
@@ -17,30 +17,29 @@
     "jszip": ">=3.0.0"
   },
   "devDependencies": {
+    "rollup": "^4.9.1",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.5",
     "diff": "^5.0.0",
     "jasmine-core": "^5.1.0",
     "karma": "^6.3.9",
     "karma-chrome-launcher": "^3.1.0",
     "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "^5.0.0",
-    "ts-loader": "^9.2.6",
     "tslib": "^2.4.0",
-    "typescript": "^5.0.3",
-    "webpack": "^5.64.1",
-    "webpack-cli": "^5.0.1"
+    "typescript": "^5.0.3"
   },
   "scripts": {
-    "build": "webpack",
-    "build-prod": "webpack --mode production",
-    "build-umd": "webpack --env umd=true",
-    "build-all": "npm run build & npm run build-prod & npm run build-umd",
-    "watch": "webpack --env umd=true --watch",
+    "build": "rollup --config rollup.config.mjs",
+    "build-prod": "rollup --config rollup.config.mjs --environment BUILD:production",
+    "watch": "rollup --config rollup.config.mjs --watch",
     "e2e": "karma start --single-run",
     "e2e-watch": "karma start"
   },
   "files": [
     "dist"
   ],
-  "main": "dist/docx-preview.min.mjs",
+  "type": "module",
+  "module": "dist/docx-preview.min.mjs",
   "types": "dist/docx-preview.d.ts"
 }
