--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "ES2022",
     "declaration": false,
     "noImplicitAny": false,
     "noEmitOnError": true,
@@ -10,6 +10,7 @@
     "sourceMap": true,
     "noEmitHelpers": false,
     "importHelpers": false,
+    "esModuleInterop": true,
     "target": "ES2020",
     "outDir": "dist",
     "lib": [
