Also remove "type": "module" and fix TS module resolution

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "module": "ES2022",
+    "moduleResolution": "bundler",
     "declaration": false,
     "noImplicitAny": false,
     "noEmitOnError": true,
