--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "importHelpers": false,
     "esModuleInterop": true,
     "target": "ES2020",
-    "outDir": "dist",
+    "noEmit": true,
     "lib": [
       "ES2017",
       "dom"
