Update package.json to export types
With release 3.0.1, `tsc --build --force` on a project that imports `'docx-preview'` fails on type checking.

The reason seems to be that "exports" was added three weeks ago (and made its way into release 3.0.1), but the "types" subfield was not declared in the "exports" field.

This commit fixes the issue `tsc --build` works fine for downstream projects.

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
   "exports": {
     ".": {
       "import": "./dist/docx-preview.mjs",
-      "require": "./dist/docx-preview.js"
+      "require": "./dist/docx-preview.js",
+      "types": "./dist/docx-preview.d.ts"
     }
   },
   "types": "dist/docx-preview.d.ts"
